catkin_ws/logs/iq_gnc/build.make.292.log.stderr
In file included from /home/mario/catkin_ws/src/iq_gnc/src/pub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::PoseStamped get_global_position()’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:483:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘x’
  483 |   glbl_pos.x = (gps_position.latitude - map_origin_gps.latitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:484:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘y’
  484 |   glbl_pos.y = (gps_position.longitude - map_origin_gps.longitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:485:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  485 |   glbl_pos.z = (gps_position.altitude - map_origin_gps.altitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:487:9: error: ‘glbl_pos’ was not declared in this scope
  487 |  return glbl_pos;
      |         ^~~~~~~~
In file included from /home/mario/catkin_ws/src/iq_gnc/src/gnc_tutorial.cpp:1:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::PoseStamped get_global_position()’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:483:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘x’
  483 |   glbl_pos.x = (gps_position.latitude - map_origin_gps.latitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:484:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘y’
  484 |   glbl_pos.y = (gps_position.longitude - map_origin_gps.longitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:485:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  485 |   glbl_pos.z = (gps_position.altitude - map_origin_gps.altitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:487:9: error: ‘glbl_pos’ was not declared in this scope
  487 |  return glbl_pos;
      |         ^~~~~~~~
make[2]: *** [CMakeFiles/pub.dir/build.make:63: CMakeFiles/pub.dir/src/pub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:244: CMakeFiles/pub.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
In file included from /home/mario/catkin_ws/src/iq_gnc/src/square.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::PoseStamped get_global_position()’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:483:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘x’
  483 |   glbl_pos.x = (gps_position.latitude - map_origin_gps.latitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:484:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘y’
  484 |   glbl_pos.y = (gps_position.longitude - map_origin_gps.longitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:485:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  485 |   glbl_pos.z = (gps_position.altitude - map_origin_gps.altitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:487:9: error: ‘glbl_pos’ was not declared in this scope
  487 |  return glbl_pos;
      |         ^~~~~~~~
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::PoseStamped get_global_position()’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:483:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘x’
  483 |   glbl_pos.x = (gps_position.latitude - map_origin_gps.latitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:484:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘y’
  484 |   glbl_pos.y = (gps_position.longitude - map_origin_gps.longitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:485:12: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  485 |   glbl_pos.z = (gps_position.altitude - map_origin_gps.altitude) * pow(10,5);
      |            ^
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:487:9: error: ‘glbl_pos’ was not declared in this scope
  487 |  return glbl_pos;
      |         ^~~~~~~~
make[2]: *** [CMakeFiles/gnc_example.dir/build.make:63: CMakeFiles/gnc_example.dir/src/gnc_tutorial.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1648: CMakeFiles/gnc_example.dir/all] Error 2
make[2]: *** [CMakeFiles/square.dir/build.make:63: CMakeFiles/square.dir/src/square.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:217: CMakeFiles/square.dir/all] Error 2
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
